[package]
name = "openhoshimi-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Frame decoders (AX.25, AO-40 FEC, ...) for OpenHoshimi"

[dependencies]
openhoshimi-core = { workspace = true }
openhoshimi-dsp = { workspace = true }
crc = { workspace = true }
