[package]
name = "openhoshimi-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core traits, data models, and satellite definition loader for OpenHoshimi"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
