[package]
name = "openhoshimi-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Input sources (WAV, IQ files, soundcard) for OpenHoshimi"

[dependencies]
openhoshimi-core = { workspace = true }
hound = { workspace = true }
cpal = { workspace = true }
lewton = { workspace = true }
ogg = { workspace = true }
