[package]
name = "openhoshimi-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared runtime state for OpenHoshimi decode pipelines"

[dependencies]
openhoshimi-core = { workspace = true }
openhoshimi-dsp = { workspace = true }
openhoshimi-codec = { workspace = true }
openhoshimi-telemetry = { workspace = true }
openhoshimi-io = { workspace = true }

