[package]
name = "cpm_dump"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Diagnostic dumper for OpenHoshimi CPM demodulator output."

[[bin]]
name = "cpm_dump"
path = "src/main.rs"

[dependencies]
openhoshimi-core = { workspace = true }
openhoshimi-io = { workspace = true }
openhoshimi-dsp = { workspace = true }
clap = { workspace = true }
