[package]
name = "decode_file"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Offline WAV-to-frames decoding tool for OpenHoshimi"

[[bin]]
name = "decode_file"
path = "src/main.rs"

[dependencies]
openhoshimi-core = { workspace = true }
openhoshimi-dsp = { workspace = true }
openhoshimi-codec = { workspace = true }
openhoshimi-io = { workspace = true }
clap = { workspace = true }
