[package]
name = "iq_inspect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IQ WAV spectral and constellation inspector for OpenHoshimi"

[[bin]]
name = "iq_inspect"
path = "src/main.rs"

[dependencies]
openhoshimi-core = { workspace = true }
openhoshimi-io = { workspace = true }
clap = { workspace = true }
